--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,6 +14,7 @@ import '../styles/global.css';
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <title>About me</title>
 </head>
 <body>
