--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,10 @@
 ---
 ---
 <header>
-    <h1>ようこそ</h1>
+    <h1>あゆの個人サイト</h1>
     <nav>
         <a href="/">ホーム</a>
+        ・
         <a href="/about">About</a>
     </nav>
 </header>
