--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,7 @@ import SkillsSection from '../components/SkillsSection.astro';
 import WorksSection from '../components/WorksSection.astro';
 import ArticlesSection from '../components/ArticlesSection.astro';
 import ContactSection from '../components/ContactSection.astro';
+import SNS from '../components/SNS.astro';
 
 import '../styles/global.css';
 ---
@@ -15,6 +16,8 @@ import '../styles/global.css';
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Rampart+One&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
     <title>About me</title>
 </head>
 <body>
@@ -25,6 +28,7 @@ import '../styles/global.css';
         <WorksSection />
         <ArticlesSection />
         <ContactSection />
+        <SNS />
     </main>
     <Footer />
 </body>
