--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -2,12 +2,9 @@
 ---
 <section>
     <h2>Contact</h2>
+    <p>メールまたはTwitterにてご連絡ください。</p>
     <p>
         <i class="fa-solid fa-envelope"></i> メール:
-        <a href="mailto:aya172957@ayutaso.com">aya172957@ayutaso.com</a>
-    </p>
-    <p>
-        <i class="fa-brands fa-square-twitter"></i> Twitter:
-        <a href="https://x.com/aya172957">@aya172957</a>
+        <a>aya172957@ayutaso.com</a>
     </p>
 </section>
