--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,11 @@
 /* ベースのスタイル */
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Noto Sans JP", sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
     background-color: #f4f4f9;
-    color: #333;
+    color: #666666;
 }
 
 main {
@@ -16,10 +16,14 @@ main {
 
 /* ヘッダーとフッター */
 header {
-    background: #0077cc;
+    background: #828fff;
     color: white;
     padding: 1rem 0;
     text-align: center;
+}
+
+header h1 {
+    font-family: "Hachi Maru Pop", sans-serif;
 }
 
 footer {
@@ -39,11 +43,11 @@ section {
 }
 
 section h2 {
-    border-bottom: 2px solid #0077cc;
+    border-bottom: 2px solid #828fff;
     padding-bottom: 0.5rem;
     margin-bottom: 1rem;
     color: #404950;
-    font-family: "Varela Round";
+    font-family: "Varela Round", sans-serif;
 }
 
 /* カード風デザイン */
@@ -56,12 +60,13 @@ section h2 {
 }
 /* リンク */
 a {
-    color: #0077cc;
+    color: #ff7593;
     text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+    color: #ff9cb1;
+    text-decoration: none;
 }
 
 /* リストスタイル */
@@ -77,7 +82,60 @@ ul li {
 
 ul li i {
     margin-right: 0.5rem;
-    color: #0077cc;
+    color: #828fff;
 }
 
+
+/* SNSアイコン全体のスタイル */
+.sns-icons {
+    display: flex;
+    gap: 15px; /* アイコン間の隙間 */
+    justify-content: center;
+    margin-top: 20px;
+}
+
+/* 各SNSアイコンの共通スタイル */
+.sns-icon {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+    color: #666666;
+    font-size: 24px;
+    text-decoration: none; /* 下線を無効化 */
+    transition: background-color 0.3s, transform 0.3s, color 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden; /* 中の余分な要素を隠す */
+}
+
+/* Twitterアイコンの個別スタイル */
+.sns-icon.twitter {
+    background-color: #1da1f2;
+    color: white;
+}
+
+/* GitHubアイコンの個別スタイル */
+.sns-icon.github {
+    background-color: #333333;
+    color: white;
+}
+
+/* ホバー時のエフェクト */
+.sns-icon:hover {
+    transform: scale(1.1); /* 少し拡大する */
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+}
+
+/* ホバー時の色変化 */
+.sns-icon.twitter:hover {
+    background-color: #1a91da;
+}
+
+.sns-icon.github:hover {
+    background-color: #24292e;
+}
 
