--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,14 @@
 ---
 ---
+<style>
+footer {
+    background: #333;
+    color: white;
+    padding: 1rem 0;
+    text-align: center;
+}
+</style>
+
 <footer>
     <p>&copy; 2024 aya172957</p>
 </footer>
