--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,19 @@
 ---
 ---
+
+<style>
+header {
+    background: #828fff;
+    color: white;
+    padding: 1rem 0;
+    text-align: center;
+}
+
+header h1 {
+    font-family: "Hachi Maru Pop", sans-serif;
+}
+</style>
+
 <header>
     <h1>あゆの個人サイト</h1>
     <nav>
