--- a/src/components/SkillsSection.astro
+++ b/src/components/SkillsSection.astro
@@ -28,7 +28,6 @@
 .skill-card {
     background-color: #ffffff;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -72,8 +71,32 @@
             <p>Docker</p>
         </div>
         <div class="skill-card">
+            <i class="fa-brands fa-git-alt"></i>
+            <p>Git</p>
+        </div>
+        <div class="skill-card">
             <i class="fa-brands fa-react"></i>
             <p>React</p>
+        </div>
+        <div class="skill-card">
+            <i class="fa-brands fa-php"></i>
+            <p>PHP</p>
+        </div>
+        <div class="skill-card">
+            <i class="fa-brands fa-swift"></i>
+            <p>Swift</p>
+        </div>
+        <div class="skill-card">
+            <i class="fa-brands fa-html5"></i>
+            <p>HTML</p>
+        </div>
+        <div class="skill-card">
+            <i class="fa-brands fa-css3-alt"></i>
+            <p>CSS</p>
+        </div>
+        <div class="skill-card">
+            <i class="fa-brands fa-js-square"></i>
+            <p>JavaScript</p>
         </div>
     </div>
 </section>
