--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ header h1 {
 </style>
 
 <header>
-    <h1>あゆの個人サイト</h1>
+    <h1>あゆたそどっとこむ</h1>
     <nav>
         <a href="/">ホーム</a>
         ・
