--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,6 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<p>Welcome to ayutaso.com!</p>
+	<p>main page is /about. Please watch /about !</p>
 </Layout>
