--- a/src/components/Works/Ishiike.astro
+++ b/src/components/Works/Ishiike.astro
@@ -1,7 +1,6 @@
 ---
 ---
 <>
-    <h3>石池</h3>
+    <h3><a href="https://ishiike.herokuapp.com">石池 | Ishiike</a></h3>
     <p>都立大情報共有サイトです。</p>
-    <a href="https://ishiike.herokuapp.com">石池 | Ishiike</a>
 </>
