--- a/src/components/Works/Qualtet.astro
+++ b/src/components/Works/Qualtet.astro
@@ -1,7 +1,6 @@
 ---
 ---
 <>
-    <h3>Qualtet</h3>
+    <h3><a href="https://qualtet.com">Qualtet</a></h3>
     <p>citruz.devの4人チームで開発したWebアプリです。Google Developer Solution Challenge Japan というハッカソンで最優秀賞をいただきました。</p>
-    <a href="https://qualtet.com">Qualtet</a>
 </>
