--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import SkillsSection from '../components/SkillsSection.astro';
 import WorksSection from '../components/WorksSection.astro';
 import ArticlesSection from '../components/ArticlesSection.astro';
 import ContactSection from '../components/ContactSection.astro';
-import SNS from '../components/SNS.astro';
+import SnsIcons from '../components/SnsIcons.astro';
 
 import '../styles/global.css';
 ---
@@ -28,7 +28,7 @@ import '../styles/global.css';
         <WorksSection />
         <ArticlesSection />
         <ContactSection />
-        <SNS />
+        <SnsIcons />
     </main>
     <Footer />
 </body>
