--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,6 +7,7 @@ import WorksSection from '../components/WorksSection.astro';
 import ArticlesSection from '../components/ArticlesSection.astro';
 import ContactSection from '../components/ContactSection.astro';
 import SnsIcons from '../components/SnsIcons.astro';
+import ProfileIcon from '../components/ProfileIcon.astro';
 
 import '../styles/global.css';
 ---
