--- a/src/components/ProfileIcon.astro
+++ b/src/components/ProfileIcon.astro
@@ -4,7 +4,7 @@ import iconImage from "../assets/icon.jpg";
 
 ---
 
-<Image src={iconImage} alt="プロフィール画像" class="icon" style={{ border: '5px solid #828fff' }}/>
+<Image src={iconImage} alt="プロフィール画像" class="icon"/>
 
 <style>
 .icon {
