--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,7 @@ section {
     background: white;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 1s ease-in-out;
 }
 
 section h2 {
@@ -60,3 +61,14 @@ ul li i {
     color: #828fff;
 }
 
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
