--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,6 +18,7 @@ import '../styles/global.css';
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Rampart+One&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
+    <link rel="icon" href="/icon.jpg" type="image/x-icon" />
     <title>About me</title>
 </head>
 <body>
