--- a/src/components/ArticlesSection.astro
+++ b/src/components/ArticlesSection.astro
@@ -3,8 +3,9 @@
 <section>
     <h2>Articles</h2>
     <ul>
+        <li><a href="https://tech.monoxer.com/entry/2024/03/29/200924">Monoxer Intern Report #16_文章分割確認ツールの開発</a></li>
         <li><a>[準備中] APIを使用せずに Django Template 中でReactを使用する方法</a></li>
         <li><a>[準備中] ICPC2022 アジア大会参加記</a></li>
-        <li><a>[準備中] Pixivバックエンドエンジニアインターンに行った話</a></li>
+        <li><a>[準備中] CyberAgent ACE 2024 で最高に成長できた話</a></li>
     </ul>
 </section>
