--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,8 +7,22 @@ import WorksSection from '../components/WorksSection.astro';
 import ArticlesSection from '../components/ArticlesSection.astro';
 import ContactSection from '../components/ContactSection.astro';
 import SnsIcons from '../components/SnsIcons.astro';
+import Career from '../components/Career.astro';
 
 import '../styles/global.css';
+
+const careerItems = [
+    { year: "April 2022", title: "大学入学", description: "東京都立大学に入学し、コンピュータサイエンスを専攻" },
+    { year: "December 2022", title: "ICPC Asia Yokohama Regional", description: "ICPCアジア予選に出場" },
+    { year: "August 2023", title: "Software engineer Intern at pixiv Inc.", description: "pixivコミックのバックエンド開発に携わる" },
+    { year: "October 2023", title: "プログラミングコンテスト 30th", description: "PGBattle2023 大学専門学校の部30位 アシスト賞" },
+    { year: "December 2023", title: "ハッカソン 最優秀賞", description: "Google Developer Solution Challenge Japan 2023 最優秀賞 & チームラボ賞"},
+    { year: "February 2024 ~", title: "Software engineer Intern at Monoxer", description: "iOS, Android, Web Frotend, Backend フルスタックで開発"},
+    { year: "August 2024", title: "Software engineer Intern at COLOPL, inc.", description: "ソーシャルゲームのサーバサイド開発を経験"},
+    { year: "September 2024", title: "CyberAgent ACE 2024 個人賞", description: "CyberAgentのインターンにて個人賞を受賞"},
+    { year: "Now"}
+];
+
 ---
 <!DOCTYPE html>
 <html lang="ja">
@@ -28,6 +42,7 @@ import '../styles/global.css';
         <SkillsSection />
         <WorksSection />
         <ArticlesSection />
+        <Career items={careerItems} />
         <ContactSection />
         <SnsIcons />
     </main>
