--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,7 +20,7 @@ const careerItems = [
     { year: "February 2024 ~", title: "Software engineer Intern at Monoxer", description: "iOS, Android, Web Frotend, Backend フルスタックで開発"},
     { year: "August 2024", title: "Software engineer Intern at COLOPL, inc.", description: "ソーシャルゲームのサーバサイド開発を経験"},
     { year: "September 2024", title: "CyberAgent ACE 2024 個人賞", description: "CyberAgentのインターンにて個人賞を受賞"},
-    { year: "Now"}
+    { year: "Now", title: "", description: "" }
 ];
 
 ---
