--- a/src/components/ProfileIcon.astro
+++ b/src/components/ProfileIcon.astro
@@ -13,5 +13,6 @@ import iconImage from "../assets/icon.jpg";
     object-fit: cover; /* アスペクト比を維持 */
     width: 150px; /* 幅を指定 */
     height: 150px; /* 高さを指定 */
+    flex-shrink: 0; /* 画像が縮むのを防ぐ */
 }
 </style>
