--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,23 +45,6 @@ a:hover {
     text-decoration: none;
 }
 
-/* リストスタイル */
-ul {
-    padding-left: 20px;
-}
-
-ul li {
-    margin-bottom: 0.5rem;
-    display: flex;
-    align-items: center;
-}
-
-ul li i {
-    margin-right: 0.5rem;
-    color: #828fff;
-}
-
-
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -70,5 +53,14 @@ ul li i {
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+/* スマホ対応 */
+@media (max-width: 900px) {
+    main {
+        max-width: 95% !important; /* 画面幅の95%を使用して左右に余白を確保 */
+        padding: 15px !important; /* 内側の余白を少し調整 */
+        margin: 0 auto !important; /* メインコンテンツを中央揃え */
     }
 }
