--- a/src/components/Works/Ishiike.astro
+++ b/src/components/Works/Ishiike.astro
@@ -1,6 +1,6 @@
 ---
 ---
 <div>
-    <h3><a href="https://ishiike.herokuapp.com">石池 | Ishiike</a></h3>
-    <p>都立大情報共有サイトです。</p>
+    <h3><a href="https://ishiike.herokuapp.com" target="_blank">石池 | Ishiike</a></h3>
+    <p>MAU5000人越えの都立大情報共有サイトです。個人で開発・運用を手がけています。</p>
 </div>
