--- a/src/components/Works/Qualtet.astro
+++ b/src/components/Works/Qualtet.astro
@@ -1,6 +1,6 @@
 ---
 ---
 <div>
-    <h3><a href="https://qualtet.com">Qualtet</a></h3>
+    <h3><a href="https://qualtet.com" target="_blank">Qualtet</a></h3>
     <p>citruz.devの4人チームで開発したWebアプリです。Google Developer Solution Challenge Japan というハッカソンで最優秀賞をいただきました。</p>
 </div>
