--- a/src/components/WorksSection.astro
+++ b/src/components/WorksSection.astro
@@ -1,6 +1,8 @@
 ---
 import Qualtet from './Works/Qualtet.astro';
 import Ishiike from './Works/Ishiike.astro';
+import TheDice from './Works/TheDice.astro';
+import KibacoAdvance from './Works/KibacoAdvance.astro';
 ---
 
 <section>
@@ -10,6 +12,12 @@ import Ishiike from './Works/Ishiike.astro';
     </div>
     <div class="card">
         <Qualtet />
+    </div>
+    <div class="card">
+        <TheDice />
+    </div>
+    <div class="card">
+        <KibacoAdvance />
     </div>
 </section>
 
