--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import '../styles/global.css';
 
 const careerItems = [
     { year: "April 2022", title: "大学入学", description: "東京都立大学に入学し、コンピュータサイエンスを専攻" },
-    { year: "December 2022", title: "ICPC Asia Yokohama Regional", description: "ICPCアジア予選に出場" },
+    { year: "December 2022", title: "ICPC Asia Yokohama Regional", description: "国内予選を突破しICPCアジア予選に出場 53位を獲得" },
     { year: "August 2023", title: "Software engineer Intern at pixiv Inc.", description: "pixivコミックのバックエンド開発に携わる" },
     { year: "October 2023", title: "プログラミングコンテスト 30th", description: "PGBattle2023 大学専門学校の部30位 アシスト賞" },
     { year: "December 2023", title: "ハッカソン 最優秀賞", description: "Google Developer Solution Challenge Japan 2023 最優秀賞 & チームラボ賞"},
