--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@
 <header>
     <h1>あゆたそどっとこむ</h1>
     <nav>
-        <a href="/">ホーム</a>
-        ・
-        <a href="/about">About</a>
+        <a href="/">ホーム</a> ・
+        <a href="/about">About</a> ・
+        <a href="/blog">blog</a>
     </nav>
 </header>
 
