react-iconsとpandaCSSのセットアップ

--- a/src/components/SkillsSection.astro
+++ b/src/components/SkillsSection.astro
@@ -1,12 +1,13 @@
 ---
 import ProgressBar from "./ProgressBar.astro"
+import { FaPython } from "react-icons/fa";
 ---
 
 <section>
     <h2>Skills</h2>
     <div class="skills-grid">
         <div class="skill-card">
-            <i class="fa-brands fa-python"></i>
+            <FaPython />
             <ProgressBar percentage={95} />
             <p>Python</p>
         </div>
